--- a/Webpack/package.json
+++ b/Webpack/package.json
@@ -2,12 +2,11 @@
   "name": "Webpack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
     "dev": "webpack --mode development",
     "start-server": "webpack serve --open --mode production",
     "prod": "webpack --mode production"
-  
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^9.2.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.49.9",
