--- a/Webpack/package.json
+++ b/Webpack/package.json
@@ -5,7 +5,7 @@
   "private": "true",
   "scripts": {
     "dev": "webpack --mode development",
-    "start-server": "webpack serve --open --mode production",
+    "start": "webpack serve --hot --open --mode development",
     "prod": "webpack --mode production"
   },
   "keywords": [],
@@ -15,15 +15,22 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@hot-loader/react-dom": "^17.0.2",
     "babel-loader": "^8.2.4",
+    "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^9.2.0",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.70.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.71.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
@@ -31,6 +38,7 @@
   "dependencies": {
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0"
   }
 }
