--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -7,22 +7,31 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "start": "webpack serve --hot --mode development --open"
+    "start": "webpack serve --hot --mode development --open",
+    "lint": "eslint src/*.tsx",
+    "lint:fix": "eslint --fix src/*.tsx"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@hot-loader/react-dom": "^17.0.2",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
+    "eslint": "^8.13.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-watch": "^8.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.1",
