--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -2,14 +2,14 @@
   "name": "React_Fundamentals",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development --open",
-    "lint": "eslint src/*.tsx",
-    "lint:fix": "eslint --fix src/*.tsx"
+    "lint": "eslint src/*",
+    "lint:fix": "eslint --fix src/*"
   },
   "keywords": [],
   "author": "",
