--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -8,8 +8,8 @@
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development --open",
-    "lint": "eslint src/*",
-    "lint:fix": "eslint --fix src/*"
+    "lint": "eslint src/**/*.tsx",
+    "lint:fix": "eslint src/**/*.tsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,8 @@
     "@hot-loader/react-dom": "^17.0.2",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
