FIX: added .eslintrc

--- a/React_Fundamentals/.eslintrc
+++ b/React_Fundamentals/.eslintrc
@@ -1,11 +1,10 @@
 {
-    "parser": "@babel/eslint-parser",
-    "plugins": [
-        "react"
-    ],
+    "parser":  "@typescript-eslint/parser",
+    "plugins": [ "@typescript-eslint", "react" ],
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 6,
