--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -47,8 +47,12 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.24",
+    "antd": "^4.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   }
 }
