--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^8.0.1",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   }
 }
