--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -47,6 +47,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/react-redux": "^7.1.24",
     "antd": "^4.20.0",
     "react": "^17.0.2",
