--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -49,13 +49,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-redux": "^7.1.24",
+    "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.0.1",
     "react-router-dom": "^6.3.0",
+    "react-widgets": "^5.8.4",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.52.1"
   }
 }
