--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -47,6 +47,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/react-redux": "^7.1.24",
     "ant-design-draggable-modal": "^1.0.0",
