--- a/React_Fundamentals/src/common/wiget-filter-app/.babelrc
+++ b/React_Fundamentals/src/common/wiget-filter-app/.babelrc
@@ -4,11 +4,17 @@
       "@babel/preset-env",
           {
         "modules": false
-          }
+          },
+      "@babel/preset-flow"
       ],
     "@babel/preset-react"
   ],
   "plugins": [
     "react-hot-loader/babel"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+    }
+  }
 }
