--- a/React_Fundamentals/src/common/wiget-filter-app/package.json
+++ b/React_Fundamentals/src/common/wiget-filter-app/package.json
@@ -9,7 +9,10 @@
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development --open",
     "lint": "eslint src/**/*.tsx",
-    "lint:fix": "eslint src/**/*.tsx --fix"
+    "lint:fix": "eslint src/**/*.tsx --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +22,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.18.6",
     "@hot-loader/react-dom": "^17.0.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^17.0.14",
@@ -49,9 +53,14 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/jest": "^28.1.4",
     "@types/react-redux": "^7.1.24",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.20.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint-plugin-jest": "^26.5.3",
+    "jest": "^28.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
@@ -60,6 +69,10 @@
     "react-widgets": "^5.8.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.52.1"
+    "sass": "^1.52.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2",
+    "@types/node": "^17.0.21"
   }
 }
