--- a/React_Fundamentals/.eslintrc
+++ b/React_Fundamentals/.eslintrc
@@ -1,6 +1,6 @@
 {
     "parser":  "@typescript-eslint/parser",
-    "plugins": [ "@typescript-eslint", "react" ],
+    "plugins": [ "@typescript-eslint", "react", "jest" ],
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended"
@@ -33,6 +33,7 @@
     "env": {
         "browser": true,
         "node": true,
-        "es6": true
+        "es6": true,
+        "jest": true
     }
 }
