--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -9,6 +9,7 @@
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development --open",
     "lint": "eslint src/**/*.tsx",
+    "test-progress-bar": "jest src/common/ProgressBar",
     "lint:fix": "eslint src/**/*.tsx --fix"
   },
   "keywords": [],
@@ -36,11 +37,17 @@
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.1",
+    "ts-jest": "^28.0.5",
     "prettier": "^2.6.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "babel-jest": "^28.1.2",
     "ts-loader": "^9.2.8",
+    "eslint-plugin-jest": "^26.5.3",
     "typescript": "^4.6.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
@@ -49,6 +56,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.43",
     "@types/react-redux": "^7.1.24",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.20.0",
