--- a/React_Fundamentals/src/common/wiget-filter-app/tsconfig.json
+++ b/React_Fundamentals/src/common/wiget-filter-app/tsconfig.json
@@ -10,8 +10,9 @@
       "target": "es5",
       "allowJs": true,
       "jsx": "react-jsx",
+      "esModuleInterop": true
   },
   "include": [
-      "./src/**/*"
+      "src"
   ]
 }
