--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -9,7 +9,7 @@
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development --open",
     "lint": "eslint src/**/*.tsx",
-    "test-progress-bar": "jest src/common/ProgressBar",
+    "test": "jest",
     "lint:fix": "eslint src/**/*.tsx --fix"
   },
   "keywords": [],
