--- a/React_Fundamentals/package.json
+++ b/React_Fundamentals/package.json
@@ -9,7 +9,6 @@
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development --open",
     "lint": "eslint src/**/*.tsx",
-    "test": "jest",
     "lint:fix": "eslint src/**/*.tsx --fix"
   },
   "keywords": [],
@@ -26,26 +25,20 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-react": "^7.29.4",
     "eslint-watch": "^8.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.2",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "ts-jest": "^28.0.5",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
@@ -54,25 +47,15 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/dom": "^8.16.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.43",
     "@types/react-redux": "^7.1.24",
-    "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-redux": "^7.0.1",
     "react-router-dom": "^6.3.0",
-    "react-widgets": "^5.8.4",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.52.1"
+    "redux-thunk": "^2.4.1"
   }
 }
